--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body{
     color: var(--c-body);
     scroll-behavior: smooth;
 }
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
+h1, h2, h3, h4, h5, h6, h1, h2, h3, h4, h5, h6
 {
     font-weight: 650;
     color:white!important;
